config: rename fields to remove redundancy
